# django-shorturls

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE  README  README.md  README.rst  bootstrap.py  buildout.cfg  pyproject.toml  setup.py
.github/workflows/: test.yml
script/: test
src/shorturls/: __init__.py  baseconv.py  sequencemapper.py  testsettings.py  urls.py  views.py
src/shorturls/fixtures/: shorturls-test-data.json
src/shorturls/templatetags/: shorturl.py
src/shorturls/tests/: __init__.py  models.py  test_baseconv.py  test_sequencemapper.py  test_templatetag.py  test_views.py
src/shorturls/tests/templates/: 404.html
